WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208567
WebChromeClient::createImageBuffer should not create a connection to GPU Process if page does not want remote rendering
https://bugs.webkit.org/show_bug.cgi?id=208567
Summary
WebChromeClient::createImageBuffer should not create a connection to GPU Proc...
youenn fablet
Reported
2020-03-04 01:33:44 PST
WebChromeClient::createImageBuffer should not create a connection to GPU Process if page does not want remote rendering
Attachments
Patch
(5.98 KB, patch)
2020-03-04 01:49 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2020-03-04 01:47:26 PST
<
rdar://problem/60020229
>
youenn fablet
Comment 2
2020-03-04 01:49:19 PST
Created
attachment 392394
[details]
Patch
WebKit Commit Bot
Comment 3
2020-03-04 08:32:05 PST
Comment on
attachment 392394
[details]
Patch Clearing flags on attachment: 392394 Committed
r257845
: <
https://trac.webkit.org/changeset/257845
>
WebKit Commit Bot
Comment 4
2020-03-04 08:32:06 PST
All reviewed patches have been landed. Closing bug.
Said Abou-Hallawa
Comment 5
2020-03-04 08:41:09 PST
Comment on
attachment 392394
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=392394&action=review
> Source/WebKit/WebProcess/WebCoreSupport/WebChromeClient.cpp:-910 > - RenderingMode mode; > - if (m_page.shouldUseRemoteRenderingFor(purpose)) > - mode = shouldAccelerate == ShouldAccelerate::Yes ? RenderingMode::RemoteAccelerated : RenderingMode::RemoteUnaccelerated; > - else if (shouldUseDisplayList == ShouldUseDisplayList::Yes) > - mode = shouldAccelerate == ShouldAccelerate::Yes ? RenderingMode::DisplayListAccelerated : RenderingMode::DisplayListUnaccelerated; > - else > - mode = shouldAccelerate == ShouldAccelerate::Yes ? RenderingMode::Accelerated : RenderingMode::Unaccelerated; > - return ensureRemoteRenderingBackend().createImageBuffer(size, mode, resolutionScale, colorSpace);
With this change, the argument 'shouldUseDisplayList' became unused. How does not the compiler catch this?
youenn fablet
Comment 6
2020-03-04 08:42:51 PST
> With this change, the argument 'shouldUseDisplayList' became unused. How > does not the compiler catch this?
WebCore has that constraint, not WebKit. It would be nice to be consistent.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug