WebChromeClient::createImageBuffer should not create a connection to GPU Process if page does not want remote rendering https://bugs.webkit.org/show_bug.cgi?id=208567 rdar://problem/60020229

Reviewed by Wenson Hsieh.

Manually tested.

* WebProcess/GPU/graphics/RemoteRenderingBackend.cpp:
(WebKit::RemoteRenderingBackend::createImageBuffer):
Minor refactoring to directly take a ShouldAccelerate instead of a RenderingMode.
* WebProcess/GPU/graphics/RemoteRenderingBackend.h:
* WebProcess/WebCoreSupport/WebChromeClient.cpp:
(WebKit::WebChromeClient::createImageBuffer const):
In case page does not want to do remote rendering, do not create a remote image buffer.
Instead, return null and let the caller create a local image buffer.


Canonical link: https://commits.webkit.org/221484@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257845 268f45cc-cd09-0410-ab3c-d52691b4dbfc